snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha1
383166433c80d4b1e22dc87dc7ebf37072dfb63b